--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title:               ~/paperland/writings
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
+url: "https://paperland.in"
 baseurl:             ''
+
 
 # If you are using a host that cannot resolve URLs that do
 # not end with .html (such as Neocities), set this to 'true'.
@@ -22,6 +24,7 @@ relative_permalinks: false
 
 plugins:
   - jekyll-last-modified-at
+  - jekyll-sitemap
 
 sass:
   sass_dir:          _sass
