add redirect_from to dojo

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ plugins:
   - jekyll-last-modified-at
   - jekyll-sitemap
   - jekyll-tailwind
+  - jekyll-redirect-from
 
 sass:
   sass_dir:          _sass
