tailwind to production

--- a/_config.yml
+++ b/_config.yml
@@ -46,3 +46,8 @@ defaults:
       path: "_notes/**/*.md"
     values:
       layout: "note"
+
+# tailwind:
+#   config: tailwind.config.js
+#   input: "assets/css/app.css"
+#   output: _site/assets/css/app.css
