--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,6 @@ defaults:
     values:
       layout: "note"
 
-# tailwind:
-#   config: tailwind.config.js
-#   input: "assets/css/app.css"
-#   output: _site/assets/css/app.css
+tailwind:
+
+  minify: true
