--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:               Paperland - Designing new patterns of learning
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
-url: "https://paperland.in"
+url: "https://paperland.sg"
 baseurl:             ''
 
 
