tailwind config fonts go brr

--- a/_config.yml
+++ b/_config.yml
@@ -48,5 +48,7 @@ defaults:
       layout: "note"
 
 tailwind:
-
+  config: tailwind.config.js
+  input: assets/css/app.css
+  output: _site/assets/css/app.css
   minify: true
